--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
        padding: auto;
        margin-top: 70px;
        justify-content: center;
+        
 }
 .pagebox{
        display: flex;
@@ -10,14 +11,17 @@
        /* justify-content: center; */
        width: 300px;
        height: 300px;
-       background-color: red;
+       border: 2px solid black;
+       border-radius: 15px;
+       box-shadow: 20px 20px 50px 10px  rgb(77, 157, 203) inset;
+       /* background-color: red; */
 }
 .login{
        display: flex;
        flex-direction: column;
-       padding-top: 20px;
-       margin-top: 35px;
-       background-color: yellow;
+       /* padding-top: -80px; */
+       margin-top: 15px;
+       /* background-color: yellow; */
        font-weight: 700;
 }
 .logintext{
